# ai-usage-tray-agent

./: .gitattributes  .releaserc.json  CHANGELOG.md  CLAUDE.md  ONBOARDING.md  README.md  index.html  package-lock.json  package.json  update.html  vite.config.ts
.github/workflows/: ci.yml  release-installers.yml  release.yml
docs/: grafana-dashboard.example.json  teste.http
scripts/: usage-server.ts
src/: changelog.ts  chart-utils.ts  codex-dashboard.ts  dashboard.ts  envio.ts  main.ts  novidades.ts  settings.ts  sobre.ts  styles.css  update-status.ts  update.ts  usage-format.ts  usage.ts  widget-modos.ts  widget.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/assets/: settings-panel.html  usage-dashboard.html
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_auth.rs  codex_auth.rs  codex_dashboard.rs  http_server.rs  lib.rs  main.rs  settings_panel.rs  taskbar_widget.rs  usage_dashboard.rs
